Bug 422488 - Hidded items in GUI translation tree
Summary: Hidded items in GUI translation tree
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.12
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-05 13:42 UTC by Antoni Bella
Modified: 2020-06-10 12:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
pot file in test folder (162.85 KB, image/png)
2020-06-06 14:56 UTC, Simon Depiets
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antoni Bella 2020-06-05 13:42:28 UTC
I find from Lokalize GUI in the trunk translation tree some POT files do not appear, as well as their folder (if nothing has been done). I've been comparing it to the web: https://l10n.kde.org/stats/doc/trunk-kf5/toplist/

It seems to be a bug we have been suffering over 10 years or more, and with a project tree like now, this will result in omitted translations that we do not see in the GUI.

Tested with Lokalize versions: 20.07.70 (my build) and 19.12.3

STEPS TO REPRODUCE
1. Launch lokalize application and tree see.
2. Compare with the web.

OBSERVED RESULT
Catalan    Untranslated
- web:     14509
- Lokalize: 4460


EXPECTED RESULT
- Lokalize: 14509


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.4.0-33-generic #37-Ubuntu SMP
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
Konsole output:
QStatusBar::insertWidget: Index out of range (5), appending widget
org.kde.lokalize: setting tm db config failed
org.kde.lokalize: accessing tm db config false use cache: true lang: "en_US" "ca"
org.kde.lokalize: getStats fail "/home/user/.local/share/lokalize/Castella-KF5-trunk.org.db"
org.kde.lokalize: setting tm db config failed
org.kde.lokalize: accessing tm db config false use cache: true lang: "en_US" "ca"
org.kde.lokalize: getStats fail "/home/user/.local/share/lokalize/Catala-KF5-stable-plasma-lts.org.db"

org.kde.lokalize: metainfo cache acquiring error:  " Parameter count mismatch"
[^^^ multiple lines with 5155 ocurrences] # This line is my comment
Comment 1 Simon Depiets 2020-06-06 01:41:08 UTC
I'm trying to reproduce but in French we have summit so we don't have .pot files actually.
What is the URL of the svn folder ?
Comment 2 Antoni Bella 2020-06-06 14:14:32 UTC
svn+ssh://svn@svn.kde.org/home/kde/trunk/l10n-kf5/ca

See these elements in Lokalize app for the French language. 

GUI:
kdesdk-devenv-dependencies
qmlkonsole

DOC:
akonadiclient
artikulate
atlantik
... 

Do you see them?
Comment 3 Simon Depiets 2020-06-06 14:56:41 UTC
Created attachment 129105 [details]
pot file in test folder
Comment 4 Simon Depiets 2020-06-06 14:59:46 UTC
I don't see any potfiles at all in 
/home/kde/trunk/l10n-kf5/ca

Are you using a more complicated structure with separate folders for template files? I may be missing something.
Comment 5 Antoni Bella 2020-06-06 23:51:10 UTC
(In reply to Simon Depiets from comment #4)
> I don't see any potfiles at all in 
> /home/kde/trunk/l10n-kf5/ca

Why would you want a template in the translation directory? In the GUI it is a pseudo-item...

> Are you using a more complicated structure with separate folders for
> template files? I may be missing something.

The folder basic configuration for trunk:
   ca: translations
   templates: templates
   sync: points to stable (ca)

For more references: https://l10n.kde.org/stats/gui/trunk-kf5/toplist/
  * None of the most translated languages reaches 100% ...
Comment 6 Simon Depiets 2020-06-09 16:20:33 UTC
Git commit aa192168561a5f5120408e7094f9449d1eb01379 by Simon Depiets.
Committed on 09/06/2020 at 16:19.
Pushed by sdepiets into branch 'master'.

Fix hidden items in template directory

M  +1    -1    src/project/projectmodel.cpp

https://invent.kde.org/sdk/lokalize/commit/aa192168561a5f5120408e7094f9449d1eb01379
Comment 7 Simon Depiets 2020-06-09 16:20:59 UTC
It looks like it was only an operator issue, could you try and confirm, then I'll push the fix to stable
Comment 8 Antoni Bella 2020-06-09 22:26:05 UTC
I build lokalize 19.12.3-0ubuntu1bella1 for Qt suitable version.

All work fine! Thank you :)
Comment 9 Simon Depiets 2020-06-10 12:50:26 UTC
Git commit 202676f805fd3dca629282f95d1090a5d392c453 by Simon Depiets.
Committed on 09/06/2020 at 16:42.
Pushed by sdepiets into branch 'release/20.04'.

Fix hidden items in template directory

M  +1    -1    src/project/projectmodel.cpp

https://invent.kde.org/sdk/lokalize/commit/202676f805fd3dca629282f95d1090a5d392c453