Fix hidden items in template directory

BUG:422488